added bower jquery bootstrap. St. Added random counter generator. included a room creation method.

--- a/views/layout.html
+++ b/views/layout.html
@@ -3,10 +3,12 @@
   <head>
     <title>BoomVideo</title>
     <link rel="stylesheet" href="/stylesheets/style.css">
-    <script type="text/javascript" src="https://cdn.icecomm.io/icecomm.js"></script>
-    <script type="text/javascript" src="/javascripts/ice.js"></script>
   </head>
   <body>
     {% block content %}{% endblock %}
   </body>
+	<script type="text/javascript" src="/jquery/dist/jquery.js"></script>
+	<script type="text/javascript" src="/bootstrap/dist/js/bootstrap.js"></script>
+	<script type="text/javascript" src="https://cdn.icecomm.io/icecomm.js"></script>
+	<script type="text/javascript" src="/javascripts/ice.js"></script>
 </html>
