--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,6 +1,6 @@
 body {
   padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  font: 14px "Lato", Helvetica, Arial, sans-serif;
 }
 
 a {
@@ -8,10 +8,26 @@ a {
 }
 
 video {
-    height: 300px;
-    width: 300px;
+    height: 200px;
+    width: 200px;
 }
 
 vid-box {
 	width: 100%;
 }
+
+#localVideo {
+  position: absolute;
+  right: 50px;
+  bottom: 50px;
+  width: 350px;
+}
+ 
+/*video:nth-of-type(2) {
+  position: fixed; right: 0; bottom: 0;
+  min-width: 50%; min-height: 50%;
+  width: auto; 
+  height: auto; 
+  z-index: -100;
+  background-size: cover;
+}*/
