--- a/views/index.html
+++ b/views/index.html
@@ -3,6 +3,10 @@
 {% block content %}
     <h1>{{title}}</h1>
     <p>Welcome to {{title}}</p>
+    <div class="btn-group" role="group" aria-label="...">
+      <button type="button" class="btn btn-success launch">Launch!</button>
+      <button type="button" class="btn btn-success share">Share Link!</button>
+    </div>
     <div class="vid-box">
     	<video id="localVideo" autoplay></video>
     </div>
