--- a/views/index.html
+++ b/views/index.html
@@ -1,13 +1,36 @@
 {% extends "layout.html" %}
 
 {% block content %}
-    <h1>{{title}}</h1>
-    <p>Welcome to {{title}}</p>
-    <div class="btn-group" role="group" aria-label="...">
-      <button type="button" class="btn btn-success launch">Launch!</button>
-      <button type="button" class="btn btn-success share">Share Link!</button>
-    </div>
-    <div class="vid-box">
-    	<video id="localVideo" autoplay></video>
-    </div>
+	<div class="container">
+		<br>
+	    <div class="btn-group" role="group" aria-label="...">
+	      <button type="button" class="btn btn-success launch">Launch!</button>
+	      <button type="button" class="btn btn-success share">Share Link!</button>
+	    </div>
+	    <p>
+	    <div id="invite-form">
+	    <h4>Send Invites to your Guests</h4>
+		    {% for invite in invites %}
+		    <form class="form-inline">
+		      <div class="form-group">
+		        <label for="inputName">Name</label>
+		        <input type="text" class="form-control" id="inputName{{invite}}" placeholder="Jane Doe">
+		      </div>
+		      <div class="form-group">
+		        <label for="inputEmail">Email</label>
+		        <input type="email" class="form-control" id="inputEmail{{invite}}" placeholder="jane.doe@example.com">
+		      </div>
+		      <div class="form-group">
+		        <label for="inputPhone">Phone Number</label>
+		        <input type="phone" class="form-control" id="inputPhone{{invite}}" placeholder="+12014444444">
+		      </div>
+		    </form>
+		    {% endfor %}
+	    <br>
+	    <button type="submit" class="btn btn-default send-invite">Send invitations</button>
+	    </div>
+	    <div class="vid-box" id="video-box">
+	    	<video id="localVideo" autoplay></video>
+	    </div>
+    </div>	
 {% endblock %}
