--- a/views/index.html
+++ b/views/index.html
@@ -29,8 +29,8 @@
 	    <br>
 	    <button type="submit" class="btn btn-default send-invite">Send invitations</button>
 	    </div>
-	    <div class="vid-box" id="video-box">
-	    	<video id="localVideo" autoplay></video>
+	    <div id="video-section">
+		    <video id="localVideoHost" autoplay></video>
 	    </div>
     </div>	
 {% endblock %}
