--- a/views/layout.html
+++ b/views/layout.html
@@ -26,7 +26,9 @@
   </body>
 	<script type="text/javascript" src="/jquery/dist/jquery.js"></script>
 	<script type="text/javascript" src="/bootstrap/dist/js/bootstrap.js"></script>
+	<script type="text/javascript" src="/jquery-serialize-object/dist/jquery.serialize-object.min.js"></script>
 	<script type="text/javascript" src="https://cdn.icecomm.io/icecomm.js"></script>
+	<script type="text/javascript" src="/lodash/lodash.min.js"></script>
 	<script src="/socket.io/socket.io.js"></script>
 
 	<script>
@@ -37,7 +39,10 @@
 	  });
 	  socket.on('route test', function(data) {
 	  	console.log(data);
-	  })
+	  });
+	  socket.on('guest joined room', function(data) {
+	  	console.log('a guest joined room ', data.room);
+	  });
 	</script>
 
 	<script type="text/javascript" src="/javascripts/ice.js"></script>
