added form methods for extracting phone numbers and emails.

--- a/views/layout.html
+++ b/views/layout.html
@@ -45,5 +45,5 @@
 	  });
 	</script>
 
-	<script type="text/javascript" src="/javascripts/ice.js"></script>
+	<script type="text/javascript" src="/javascripts/frontpage.js"></script>
 </html>
