upgraded twilio promises to q all array.

--- a/views/index.html
+++ b/views/index.html
@@ -13,11 +13,11 @@
 			      </div>
 			      <div class="form-group">
 			        <label for="inputEmail">Email</label>
-			        <input type="email" class="form-control" name="invitee{{ invite }}[email]" id="inputEmail{{invite}}" value="peter@gmail.com">
+			        <input type="email" class="form-control" name="invitee{{ invite }}[email]" id="inputEmail{{invite}}" value="dedes1821@gmail.com">
 			      </div>
 			      <div class="form-group">
 			        <label for="inputPhone">Phone Number</label>
-			        <input type="phone" class="form-control" name="invitee{{ invite }}[phone]" id="inputPhone{{invite}}" value="+12014444444">
+			        <input type="phone" class="form-control" name="invitee{{ invite }}[phone]" id="inputPhone{{invite}}" value="+12016931006">
 			      </div>
 			    {% endfor %}
 			    <br><br>
