text editor up and running with proper hide and show attributes set.

--- a/views/layout.html
+++ b/views/layout.html
@@ -32,7 +32,7 @@
 	<script type="text/javascript" src="https://cdn.icecomm.io/icecomm.js"></script>
 	<script src="/socket.io/socket.io.js"></script>
 
-	<div id="editor">function boom(dynamite) {
+	<div id="editor" style="display: none;">function boom(dynamite) {
 	    var x = "boom goes the dynamite";
 	    return x;
 	}</div>
