--- a/views/layout.html
+++ b/views/layout.html
@@ -34,12 +34,12 @@
 	<script src="/socket.io/socket.io.js"></script>
 
 	<div id="editor" style="display: none;">
-		// Work on code together with your guests
+// Work on code together with your guests
 
-	function boom(dynamite) {
-	    var x = "boom goes the dynamite";
-	    return x;
-	}</div>
+function boom (dynamite) {
+    var x = "boom goes the " + dynamite;
+    return x;
+}</div>
 
 	<script>
 	  var socket = io(window.location.origin);
