getting video feeds to start appearing on the DOM properly.

--- a/views/guest.html
+++ b/views/guest.html
@@ -1,8 +1,7 @@
 {% extends "layout.html" %}
 
 {% block content %}
-	<h1>You're in the {{title}}</h1>
-	<p>You are now in {{title}} {{room}}</p>
+	<h3><small>Welcome to {{title}} # {{room}}, you filthy civilian</small></h3>
 
 	<div class="vid-box">
     	<video id="localVideo" autoplay></video>
