--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -10,20 +10,33 @@ a {
 
 video {
     height: 250px;
-    width: 250px;
+    width: 320px;
+}
+
+.testvid {
+  left: 0;
+  top: 0;
+  background-color: #eee;
+}
+
+.testinner {
+  height: 100%;
+  width: 100%;
+  padding: 0;
+  background-color: #999;
 }
 
 /*vid-box {
 	width: 100%;
 }*/
 
-#localVideoHost {
+/*#localVideoHost {
   position: absolute;
   right: 50px;
   bottom: 50px;
   width: 350px;
   z-index: 1000;
-}
+}*/
 #localVideo1 {
   position: absolute;
   left: 50px;
