--- a/views/index.html
+++ b/views/index.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block content %}
-	<div class="container">
+	<div class="container-fluid">
 	    <p>
 	    <div id="invite-form" class="row">
 		    <div class="col-sm-10">
@@ -27,12 +27,26 @@
 		    </div>	
 		</div>
 
-		<div class="row video">
+
+		<div class="row">
+			<div class="col-md-6 testvid">
+				<div class="row">
+					<div class="col-xs-8 col-sm-6 testinner"><div id="guest-vid"></div></div>
+					<div class="col-xs-8 col-sm-6 testinner">Guest video 2</div>
+					<div class="col-xs-8 col-sm-6 testinner">Guest video 3</div>
+					<div class="col-xs-8 col-sm-6 testinner"><video id="localVideoHost" autoplay></video></div>
+				</div>
+			</div>
+			<div class="col-md-6">
+				Holder behind the text editor
+			</div>
+		</div>
+    </div>	
+		<!-- <div class="row video">
 			<div class="col-lg-6">
 	    		<div id="video-section">
 			</div>
 		</div>
 		    <video id="localVideoHost" autoplay></video>
-	    </div>
-    </div>	
+	    </div> -->
 {% endblock %}
