--- a/views/layout.html
+++ b/views/layout.html
@@ -33,8 +33,7 @@
 	<script type="text/javascript" src="https://cdn.icecomm.io/icecomm.js"></script>
 	<script src="/socket.io/socket.io.js"></script>
 
-	<div id="editor" style="display: none;">
-// Work on code together with your guests
+	<div id="editor" style="display: none;">// Work on code together with your guests
 
 function boom (dynamite) {
     var x = "boom goes the " + dynamite;
