--- a/views/index.html
+++ b/views/index.html
@@ -31,9 +31,11 @@
 		<div class="row">
 			<div class="col-md-6 testvid">
 				<div class="row">
-					<div class="col-xs-8 col-sm-6 testinner"><div id="guest-vid"></div></div>
-					<div class="col-xs-8 col-sm-6 testinner">Guest video 2</div>
-					<div class="col-xs-8 col-sm-6 testinner">Guest video 3</div>
+				    {% for invite in invites %}
+					    {% if invite%4 !== 0 %}
+							<div class="col-xs-8 col-sm-6 testinner"><div id="guest-vid{{invite}}">{{invite}}</div></div>
+					    {% endif %}
+				    {% endfor %}
 					<div class="col-xs-8 col-sm-6 testinner"><video id="localVideoHost" autoplay></video></div>
 				</div>
 			</div>
@@ -42,11 +44,5 @@
 			</div>
 		</div>
     </div>	
-		<!-- <div class="row video">
-			<div class="col-lg-6">
-	    		<div id="video-section">
-			</div>
-		</div>
-		    <video id="localVideoHost" autoplay></video>
-	    </div> -->
+		
 {% endblock %}
