cleanup and build for presentation.

--- a/views/index.html
+++ b/views/index.html
@@ -33,7 +33,7 @@
 				<div class="row">
 				    {% for invite in invites %}
 					    {% if invite%4 !== 0 %}
-							<div class="col-xs-8 col-sm-6 testinner"><div id="guest-vid{{invite}}">{{invite}}</div></div>
+							<div class="col-xs-8 col-sm-6 testinner"><div id="guest-vid{{invite}}"></div></div>
 					    {% endif %}
 				    {% endfor %}
 					<div class="col-xs-8 col-sm-6 testinner"><video id="localVideoHost" autoplay></video></div>
